--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 <div data-role="page" id="main">
 
+  <!-- comment -->
+
   <div data-role="header" data-id="navbar" data-position="fixed">
     <div data-role="navbar">
       <ul>
