another damned commit

--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
   <title>Pizza Shed</title>
   <meta name="viewport" content="width=device-width, initial-scale = 1">
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.css"/>
+  <script type="text/javascript" charset="utf-8" src="js/cordova-2.7.0.js"></script>
 </head>
 <body>
+
+<!--
+  WARNING: Collection and use of geolocation data raises important privacy issues.
+  Your app's privacy policy should discuss how the app uses geolocation data,
+  whether it is shared with any other parties,
+  and the level of precision of the data (for example, coarse, fine, ZIP code level, etc.).
+  Geolocation data is generally considered sensitive because it can reveal user's whereabouts and,
+  if stored, the history of their travels.
+  Therefore, in addition to the app's privacy policy,
+  you should strongly consider providing a just-in-time notice before the app accesses geolocation data
+  (if the device operating system doesn't do so already).
+  That notice should provide the same information noted above,
+  as well as obtaining the user's permission (e.g., by presenting choices for OK and No Thanks).
+  For more information, please see the Privacy Guide.
+-->
 
 <div data-role="page" id="main">
 
